# dagreon

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pixi.toml  pyproject.toml
.github/workflows/: python-publish.yml
dagreon/: __init__.py  _errors.py  _persistence.py  _report.py  _task.py  _workflow.py
docs/: api.rst  conf.py  getting_started.rst  index.rst
tests/: test_database.py  test_edge_cases.py  test_execution.py  test_fingerprinting.py  test_profiling.py  test_ray.py  test_task_decorator.py  test_task_overrides.py  test_validation.py  test_variants.py
